Update default settings in CDCreateProjectViewController

--- a/C+++/Classes/Project/Create Project/CDCreateProjectViewController.xib
+++ b/C+++/Classes/Project/Create Project/CDCreateProjectViewController.xib
@@ -75,7 +75,7 @@
                         <constraint firstAttribute="height" constant="16" id="bGK-uD-fOX"/>
                         <constraint firstAttribute="width" constant="153" id="tt4-oj-vr6"/>
                     </constraints>
-                    <buttonCell key="cell" type="check" title="Create Empty Project" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="gue-YD-rMq">
+                    <buttonCell key="cell" type="check" title="Create Empty Project" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="gue-YD-rMq">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
@@ -86,7 +86,7 @@
                         <constraint firstAttribute="width" constant="190" id="bOz-cp-jRF"/>
                         <constraint firstAttribute="height" constant="16" id="dtZ-qF-6LW"/>
                     </constraints>
-                    <buttonCell key="cell" type="check" title="Custom Compile Command" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="lea-xJ-Usg">
+                    <buttonCell key="cell" type="check" title="Custom Compile Command" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="lea-xJ-Usg">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
