--- a/C+++/Classes/Main.storyboard
+++ b/C+++/Classes/Main.storyboard
@@ -745,7 +745,7 @@
             <objects>
                 <viewController storyboardIdentifier="CDSettingsViewController" id="rhr-iv-C7G" customClass="CDSettingsViewController" customModule="C___" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="svp-l0-Kf4">
-                        <rect key="frame" x="0.0" y="0.0" width="413" height="481"/>
+                        <rect key="frame" x="0.0" y="0.0" width="413" height="535"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3dQ-SJ-Hj5">
@@ -766,14 +766,14 @@ DQ
                                 </connections>
                             </button>
                             <box fixedFrame="YES" title="Code Editing Options" translatesAutoresizingMaskIntoConstraints="NO" id="ShY-l0-GiF">
-                                <rect key="frame" x="15" y="279" width="381" height="188"/>
+                                <rect key="frame" x="15" y="286" width="381" height="235"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <view key="contentView" id="PXH-IF-FbD">
-                                    <rect key="frame" x="3" y="3" width="375" height="170"/>
+                                    <rect key="frame" x="3" y="3" width="375" height="217"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aYN-i8-NOp">
-                                            <rect key="frame" x="86" y="137" width="114" height="25"/>
+                                            <rect key="frame" x="86" y="184" width="114" height="25"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <popUpButtonCell key="cell" type="push" title="Menlo" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="8hh-ii-DU4" id="jMq-m3-e3g">
                                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -797,7 +797,7 @@ DQ
                                             </popUpButtonCell>
                                         </popUpButton>
                                         <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="olW-wi-IBX">
-                                            <rect key="frame" x="245" y="79" width="114" height="25"/>
+                                            <rect key="frame" x="245" y="126" width="114" height="25"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <popUpButtonCell key="cell" type="push" title="Perfect" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="a4x-cD-hh2" id="2Mr-1J-JcQ">
                                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -838,7 +838,7 @@ DQ
                                             </popUpButtonCell>
                                         </popUpButton>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xxe-C0-sNJ">
-                                            <rect key="frame" x="11" y="143" width="32" height="16"/>
+                                            <rect key="frame" x="11" y="190" width="32" height="16"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="Font" id="s8o-ij-Q4h">
                                                 <font key="font" metaFont="system"/>
@@ -847,7 +847,7 @@ DQ
                                             </textFieldCell>
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="acn-0L-GAd">
-                                            <rect key="frame" x="11" y="119" width="59" height="16"/>
+                                            <rect key="frame" x="11" y="166" width="59" height="16"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="Font size" id="oAp-vD-8NK">
                                                 <font key="font" metaFont="system"/>
@@ -856,7 +856,7 @@ DQ
                                             </textFieldCell>
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dk3-JS-Jxd">
-                                            <rect key="frame" x="11" y="82" width="223" height="19"/>
+                                            <rect key="frame" x="11" y="129" width="223" height="19"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="Syntax highlight theme (Dark Mode)" id="O31-ej-7pS">
                                                 <font key="font" metaFont="system"/>
@@ -865,7 +865,7 @@ DQ
                                             </textFieldCell>
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vYn-2L-8Yw">
-                                            <rect key="frame" x="11" y="56" width="225" height="21"/>
+                                            <rect key="frame" x="11" y="103" width="225" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="Syntax highlight theme (Light Mode)" id="Dgd-ug-Xex">
                                                 <font key="font" metaFont="system"/>
@@ -874,7 +874,7 @@ DQ
                                             </textFieldCell>
                                         </textField>
                                         <comboBox verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mdW-jF-55v">
-                                            <rect key="frame" x="88" y="113" width="112" height="25"/>
+                                            <rect key="frame" x="88" y="160" width="112" height="25"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="15" drawsBackground="YES" completes="NO" numberOfVisibleItems="6" id="yfk-Lx-8YW">
                                                 <font key="font" metaFont="system"/>
@@ -893,7 +893,7 @@ DQ
                                             </comboBoxCell>
                                         </comboBox>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WZC-kh-AwI">
-                                            <rect key="frame" x="11" y="27" width="116" height="18"/>
+                                            <rect key="frame" x="11" y="74.5" width="116" height="17.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <buttonCell key="cell" type="check" title="Auto Complete " bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="xL4-6d-xYq">
                                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -901,7 +901,7 @@ DQ
                                             </buttonCell>
                                         </button>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="icH-62-hil">
-                                            <rect key="frame" x="183" y="27" width="121" height="18"/>
+                                            <rect key="frame" x="183" y="74.5" width="121" height="17.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <buttonCell key="cell" type="check" title="Completion List" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="29g-VH-OH2">
                                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -909,7 +909,7 @@ DQ
                                             </buttonCell>
                                         </button>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HjV-4j-63o">
-                                            <rect key="frame" x="30" y="9" width="103" height="16"/>
+                                            <rect key="frame" x="30" y="56" width="103" height="16"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="(), [], {}, &quot;&quot; and ''" id="NjQ-Ys-auw">
                                                 <font key="font" metaFont="system"/>
@@ -918,7 +918,7 @@ DQ
                                             </textFieldCell>
                                         </textField>
                                         <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ItO-cj-oae">
-                                            <rect key="frame" x="245" y="53" width="114" height="25"/>
+                                            <rect key="frame" x="245" y="100" width="114" height="25"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <popUpButtonCell key="cell" type="push" title="Xcode" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="Hkm-3d-5yd" id="Tkb-qm-R4q">
                                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -952,7 +952,7 @@ DQ
                                             </popUpButtonCell>
                                         </popUpButton>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IrK-uP-frj">
-                                            <rect key="frame" x="199" y="133" width="163" height="32"/>
+                                            <rect key="frame" x="199" y="180" width="163" height="32"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <buttonCell key="cell" type="push" title="Choose another font..." bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="GhM-j5-yx4">
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -963,9 +963,26 @@ DQ
                                             </connections>
                                         </button>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Anq-4Z-2f5">
-                                            <rect key="frame" x="204" y="9" width="145" height="16"/>
+                                            <rect key="frame" x="204" y="56" width="145" height="16"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="Type Enter to complete" id="SZq-eU-zlK">
+                                                <font key="font" metaFont="system"/>
+                                                <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FGz-6y-UpR">
+                                            <rect key="frame" x="11" y="32" width="126" height="19"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                            <buttonCell key="cell" type="check" title="Auto Indentation" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="XCU-tD-Bg5">
+                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                                <font key="font" metaFont="system"/>
+                                            </buttonCell>
+                                        </button>
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RxQ-ds-nt0">
+                                            <rect key="frame" x="30" y="13" width="216" height="16"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                            <textFieldCell key="cell" lineBreakMode="clipping" title="Auto indent after inserting new line" id="0X5-TN-qeb">
                                                 <font key="font" metaFont="system"/>
                                                 <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -975,7 +992,7 @@ DQ
                                 </view>
                             </box>
                             <box fixedFrame="YES" title="General" translatesAutoresizingMaskIntoConstraints="NO" id="VaZ-vm-hPa">
-                                <rect key="frame" x="15" y="163" width="381" height="113"/>
+                                <rect key="frame" x="15" y="169" width="381" height="113"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <view key="contentView" id="7uw-2Z-dKS">
                                     <rect key="frame" x="3" y="3" width="375" height="95"/>
@@ -1019,7 +1036,7 @@ DQ
                                 </view>
                             </box>
                             <box fixedFrame="YES" title="Compiling Options" translatesAutoresizingMaskIntoConstraints="NO" id="RiA-Gz-h5D">
-                                <rect key="frame" x="15" y="45" width="381" height="114"/>
+                                <rect key="frame" x="15" y="51" width="381" height="114"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <view key="contentView" id="wT8-P8-r0o">
                                     <rect key="frame" x="3" y="3" width="375" height="96"/>
@@ -1133,7 +1150,7 @@ Gw
                 </viewController>
                 <customObject id="5A1-T6-jV9" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-803.5" y="1299.5"/>
+            <point key="canvasLocation" x="-803.5" y="1326.5"/>
         </scene>
         <!--C+++-->
         <scene sceneID="hIz-AP-VOD">
